[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codewu"
version = "0.1.3"
description = "A minimal coding agent prototype: Chat Completions API + 4 local tools, per-call y/n approval, session resume."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ShawnWu" }]
dependencies = [
    "openai>=1.50.0",
]

[project.scripts]
codewu = "codewu:main"

[tool.setuptools]
py-modules = ["codewu"]
