[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codewu"
version = "0.1.17"
description = "A minimal coding agent prototype: Chat Completions API + 5 local tools, per-call y/n approval, session resume, interactive prompt with completion + configurable history + streaming command exec with timeouts (subprocess stdin detached) + shell-version-aware system prompt."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ShawnWu" }]
dependencies = [
    "openai>=1.50.0,<2",
    "prompt_toolkit>=3.0.50,<4",
]

[project.scripts]
codewu = "codewu.cli:main"

[tool.setuptools]
packages = ["codewu"]
